--- a/chart/templates/pod.yaml
+++ b/chart/templates/pod.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: backend
+  name: {{ .Values.component }}
   labels:
-    appName: backend
-    projectName: expense
+    appName: {{ .Values.component }}
+    projectName: {{ .Chart.Name }}
 spec:
 {{ if .Values.initContainers.enabled }}
   volumes:
@@ -24,7 +24,7 @@ spec:
               name: vault-token
               key: token
         - name: SECRET_NAME
-          value: expense-dev/backend
+          value: {{ .Chart.Name }}-dev/{{ .Values.component }}
         - name: VAULT_SKIP_VERIFY
           value: "TRUE"
       volumeMounts:
@@ -38,8 +38,8 @@ spec:
           mountPath: /data
 {{ end }}
   containers:
-    - name: backend
-      image: 368761340104.dkr.ecr.us-east-1.amazonaws.com/expense-backend:2.0.1
+    - name: {{ .Values.component }}
+      image: 368761340104.dkr.ecr.us-east-1.amazonaws.com/{{ .Chart.Name }}-{{ .Values.component }}:{{ .Values.appVersion }}
       imagePullPolicy: Always
 {{ if .Values.initContainers.enabled }}
     volumeMounts:
