--- a/chart/templates/sevice.yaml
+++ b/chart/templates/sevice.yaml
@@ -1,13 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
+  name: {{ .Values.component }}
 spec:
   selector:
-    appName: backend
-    projectName: expense
+    type: {{ .Values.service.type}}
+    appName: {{ .Values.component }}
+    projectName: {{ .Chart.Name }}
   ports:
     - name: http
       protocol: TCP
-      port: 80
-      targetPort: 8080
+      port: {{ .Values.port }}
+      targetPort: {{ .Values.targetPort }}
