--- a/chart/values/backend.yaml
+++ b/chart/values/backend.yaml
@@ -1,2 +1,9 @@
 initContainers:
   enabled: true
+component: backend
+appVersion: 2.0.1
+
+service:
+  type: ClusterIp
+  port: 80
+  targetPort: 8080
