--- a/chart/values/frontend.yaml
+++ b/chart/values/frontend.yaml
@@ -1,2 +1,9 @@
 initContainers:
-  enabled: true
+  enabled: false
+component: frontend
+appVersion: 2.0.0
+
+service:
+  type: LoadBalancer
+  port: 80
+  targetPort: 80
