--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -44,6 +44,7 @@ spec:
         - name: schema
           image: 368761340104.dkr.ecr.us-east-1.amazonaws.com/schema-init-container:v2
           imagePullPolicy: Always
+          command: ["sleep", "1000"]
           volumeMounts:
             - name: vault
               mountPath: /data
@@ -57,6 +58,6 @@ spec:
         - name: vault
           mountPath: /data
       {{ end }}
-
+    
 
 
