--- a/chart/values/frontend.yaml
+++ b/chart/values/frontend.yaml
@@ -4,6 +4,10 @@ component: frontend
 appVersion: 2.0.2
 
 service:
-  type: LoadBalancer
+  type: ClusterIP
   port: 80
   targetPort: 80
+
+ingress:
+  enabled: true
+  hostName: frontend-dev.ramdevops78.online
